--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel": "^5.8.23",
     "babel-core": "^5.8.24",
     "babel-loader": "^5.3.2",
+    "es6-promise": "^3.0.2",
     "file-loader": "^0.8.4",
     "http-server": "^0.8.0",
     "jsx-loader": "^0.13.2",
