--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "http-server": "^0.8.0",
     "jsx-loader": "^0.13.2",
     "react-hot-loader": "^1.3.0",
+    "underscore": "^1.8.3",
     "webpack": "^1.12.1",
     "webpack-dev-server": "^1.10.1"
   }
