--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "babel": "^5.8.23",
     "babel-core": "^5.8.24",
     "babel-loader": "^5.3.2",
+    "babel-plugin-react-transform": "^1.1.1",
     "es6-promise": "^3.0.2",
     "file-loader": "^0.8.4",
     "http-server": "^0.8.0",
     "jsx-loader": "^0.13.2",
-    "react-hot-loader": "^1.3.0",
+    "react-transform-hmr": "^1.0.1",
     "underscore": "^1.8.3",
     "webpack": "^1.12.1",
     "webpack-dev-server": "^1.10.1"
